--- a/offline.html
+++ b/offline.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <img src="imagens/icon-192x192.png" alt="App Icon">
+  <img src="/imagens/icon-192x192.png" alt="App Icon">
   <h1>You are offline</h1>
   <p>Please check your internet connection and try again.</p>
 </body>
