--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
@@ -32,11 +32,9 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      /* Removido overflow:hidden aqui para permitir scroll na página principal */
       overflow: auto;
     }
 
-    /* Fundo do contêiner principal */
     .container {
       width: 100%;
       max-width: 1200px;
@@ -47,23 +45,18 @@
       background-image: url('imagens/fundo.png');
       background-repeat: repeat;
       background-size: 200%;
-
-      /* Permite rolagem interna se necessário,
-         mas geralmente confiamos no body. */
       overflow: auto;
     }
 
 .subtitle {
-  margin-top: 40px; /* Adiciona espaçamento acima do subtítulo */
-  font-family: Arial, sans-serif; /* Mesma fonte do título */
-  font-size: 24px; /* Ajuste o tamanho da fonte, se necessário */
-  font-weight: bold; /* Mesmo peso do título */
-  color: #333; /* Mesma cor do título */
-  text-align: center; /* Alinha o texto ao centro */
+  margin-top: 40px;
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
 }    
 
-    /* Removemos o overflow: hidden do html/body
-       para não bloquear rolagem. */
     html, body {
       height: 100%;
     }
@@ -71,7 +64,7 @@
     .levels {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center; /* Centraliza os botões */
+      justify-content: center;
       gap: 20px;
       padding: 20px;
     }
@@ -93,8 +86,8 @@
     /* Estilo da caixa de login */
     .login-container {
       display: flex;
-      align-items: center; /* Alinha verticalmente */
-      gap: 10px; /* Espaço entre avatar e nome */
+      align-items: center;
+      gap: 10px;
       position: absolute;
       top: 20px;
       right: 60px;
@@ -145,21 +138,20 @@
 
     /* Contêiner para o robô e botão (logo abaixo do título) */
     .robo-container {
-      display: flex; /* só aparece se não logado */
+      display: flex;
       flex-direction: column;
       align-items: center;
       margin: 20px auto;
     }
 
     .robo-img {
-      width: 300px; /* maior */
+      width: 300px;
       height: auto;
       cursor: default;
     }
 
-    /* Botão "PLAY" - estilo branco com canto arredondado */
     .play-button {
-      margin-top: -40px; /* ajusta conforme imagem */
+      margin-top: -40px;
       padding: 8px 16px;
       border: 2px solid #ccc;
       border-radius: 20px;
@@ -177,17 +169,16 @@
       background-color: #eee;
     }
 
-  /* Centraliza as imagens de convite e jogos (agora sempre animadas) */
 .invitation-container {
-  display: flex; /* só aparece se não logado */
-  justify-content: center; /* Centraliza os itens horizontalmente */
-  align-items: center; /* Alinha os itens verticalmente */
-  gap: 20px; /* Espaçamento horizontal entre as imagens */
-  margin: 20px 0; /* Espaçamento vertical */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 20px 0;
 }
 
 .invitation-button, .free-games-button {
-  max-width: 40%; /* Reduz o tamanho para caber ambas imagens lado a lado */
+  max-width: 40%;
   height: auto;
   cursor: pointer;
   border-radius: 10px;
@@ -196,8 +187,28 @@
 }
 
 .invitation-button:hover, .free-games-button:hover {
-  transform: scale(1.05); /* Aumenta o tamanho ao passar o mouse */
+  transform: scale(1.05);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+/* --- Botão flutuante de instalação do PWA --- */
+#installBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+  cursor: pointer;
+  font-size: 16px;
+}
+#installBtn:hover {
+  background-color: #0056b3;
 }
   </style>
 </head>
@@ -217,7 +228,7 @@
       </div>
     </header>
 
-    <!-- ROBÔ e BOTÃO PLAY (ficam ENTRE o título e o convite.gif) -->
+    <!-- ROBÔ e BOTÃO PLAY -->
     <div class="robo-container" id="roboContainer">
       <img src="imagens/robo_estatico.png" alt="Robô" class="robo-img" id="roboImage">
       <button class="play-button" id="playTTSBtn">
@@ -225,21 +236,21 @@
       </button>
     </div>
 
-    <!-- O CONVITE.GIF (roda direto) só aparece se não logado -->
+    <!-- CONVITE -->
     <div class="invitation-container" id="invitationContainer">
-  <img src="imagens/convite.gif" 
-       alt="Convite Animado" 
-       class="invitation-button" 
-       id="invitationButton"/>
-  <img src="imagens/Free_Games.gif" 
-       alt="Jogos Grátis" 
-       class="free-games-button" 
-       id="freeGamesButton"/>
-</div>
+      <img src="imagens/convite.gif" 
+           alt="Convite Animado" 
+           class="invitation-button" 
+           id="invitationButton"/>
+      <img src="imagens/Free_Games.gif" 
+           alt="Jogos Grátis" 
+           class="free-games-button" 
+           id="freeGamesButton"/>
+    </div>
 
     <main>          
-   <h2 class="subtitle" id="subtitleLoggedOut">Login and Start Learning English While Playing</h2>
-<h2 class="subtitle" id="subtitleLoggedIn" style="display: none;">Choose your level and Start Learning English While Playing</h2>
+      <h2 class="subtitle" id="subtitleLoggedOut">Login and Start Learning English While Playing</h2>
+      <h2 class="subtitle" id="subtitleLoggedIn" style="display: none;">Choose your level and Start Learning English While Playing</h2>
 
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
@@ -250,6 +261,9 @@
       </div>
     </main>
   </div>
+
+  <!-- Botão flutuante de instalação do PWA -->
+  <button id="installBtn">📲 Instalar App</button>
 
   <!-- Firebase Auth Script -->
   <script>
@@ -266,16 +280,16 @@
       appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
       measurementId: "G-07VVJG9LRS"
     };
-    // Evitar erro de inicialização dupla:
     if (!firebase.apps.length) {
       firebase.initializeApp(firebaseConfig);
     }
 
     // ------------------------------------------------------
-    // 2) Variáveis globais TTS
+    // 2) Variáveis globais TTS + PWA
     // ------------------------------------------------------
     let englishVoice = null;     
     let hasEnglishVoice = false; 
+    let deferredPrompt; // <-- para instalação PWA
 
     // ------------------------------------------------------
     // 3) Função para buscar voz em inglês
@@ -304,13 +318,11 @@
       }
 
       utterance.onstart = function() {
-        const roboImage = document.getElementById("roboImage");
-        roboImage.src = "imagens/robo_fala.gif";
+        document.getElementById("roboImage").src = "imagens/robo_fala.gif";
       };
 
       utterance.onend = function() {
-        const roboImage = document.getElementById("roboImage");
-        roboImage.src = "imagens/robo_estatico.png";
+        document.getElementById("roboImage").src = "imagens/robo_estatico.png";
       };
 
       speechSynthesis.speak(utterance);
@@ -326,19 +338,16 @@
       const roboContainer       = document.getElementById("roboContainer");
       const invitationContainer = document.getElementById("invitationContainer");
 
-  const subtitleLoggedOut = document.getElementById("subtitleLoggedOut");
-  const subtitleLoggedIn = document.getElementById("subtitleLoggedIn");
+      const subtitleLoggedOut = document.getElementById("subtitleLoggedOut");
+      const subtitleLoggedIn  = document.getElementById("subtitleLoggedIn");
 
-  if (user) {
-    // Usuário logado: mostrar o subtítulo "Choose your level"
-    subtitleLoggedOut.style.display = "none";
-    subtitleLoggedIn.style.display = "block";   
-       
-        // Usuário logado => esconde robô + convite
+      if (user) {
+        subtitleLoggedOut.style.display = "none";
+        subtitleLoggedIn.style.display  = "block";   
+           
         roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
 
-        // Carrega dados do user no BD
         const userRef = firebase.database().ref("usuarios/" + user.uid);
         userRef.once("value").then((snapshot) => {
           const userData = snapshot.val() || {};
@@ -347,14 +356,12 @@
             ? `imagens/${userData.avatar}`
             : "imagens/bonecologin1.png";
 
-          // Atualiza a interface do usuário
           loginLink.innerHTML = `
             <img src="${userAvatar}" alt="User Icon" class="user-icon">
             <p class="user-name">${userName}</p>
           `;
           loginLink.removeAttribute("href");
 
-          // Define o dashboard
           let dashboardLink = "";
           if (userData.role === "proprietario") {
             dashboardLink = '<a href="painel_proprietario.html" class="dashboard-link">OWNER DASHBOARD</a>';
@@ -364,12 +371,11 @@
             liberarNiveis(["Level0", "Level1", "Level2", "Level3", "Level4"]);
           } else if (userData.role === "aluno") {
             dashboardLink = '<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
-            // Se o aluno está atrelado a professor
             if (userData.atrelado_professor) {
               const professorRef = firebase.database().ref("usuarios/" + userData.atrelado_professor);
               professorRef.once("value").then((profSnapshot) => {
                 const professorData = profSnapshot.val();
-                const turmaId = "-O8mdLgStvNqNf6x-O5l"; // Ajuste conforme seu BD
+                const turmaId = "-O8mdLgStvNqNf6x-O5l";
                 const alunoId = user.uid;
 
                 const profStudent = 
@@ -394,7 +400,6 @@
                 liberarNiveis(["Level1"]);
               });
             } else {
-              // Se não tem professor
               if (userData.progresso) {
                 liberarNiveis(Object.keys(userData.progresso));
               } else {
@@ -415,10 +420,8 @@
           });
         });
       } else {
-        // Usuário deslogado: mostrar o subtítulo "Login and Start Learning"
         subtitleLoggedOut.style.display = "block";
-        subtitleLoggedIn.style.display = "none";
-        // Não está logado => mostra robô + convite
+        subtitleLoggedIn.style.display  = "none";
         roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
 
@@ -464,23 +467,16 @@
     // 8) Clique no convite -> propaganda
     // ------------------------------------------------------
     document.addEventListener("DOMContentLoaded", function() {
-      const invitationButton = document.getElementById("invitationButton");
-      invitationButton.addEventListener("click", function() {
+      document.getElementById("invitationButton").addEventListener("click", function() {
         window.location.href = "Apresentacao/propaganda.html";
+      });
+      document.getElementById("freeGamesButton").addEventListener("click", function() {
+        window.location.href = "https://hannahenglishcourse.vercel.app/game.html";
       });
     });
 
-document.addEventListener("DOMContentLoaded", function() { 
-  // Configuração do botão Free_Games.gif
-  const freeGamesButton = document.getElementById("freeGamesButton");
-  freeGamesButton.addEventListener("click", function() {
-    // Redirecionar para a página de jogos grátis
-    window.location.href = "https://hannahenglishcourse.vercel.app/game.html";
-  });
-});
-
     // ------------------------------------------------------
-    // 9) Fecha o dropdown ao clicar fora dele
+    // 9) Fecha dropdown ao clicar fora
     // ------------------------------------------------------
     window.addEventListener("click", function(event) {
       const dropdown = document.getElementById("userDropdown");
@@ -510,37 +506,45 @@ document.addEventListener("DOMContentLoaded", function() {
     function setupVoices() {
       englishVoice = pickAnyEnglishVoice();
     }
-    speechSynthesis.onvoiceschanged = function() {
-      setupVoices();
-    };
+    speechSynthesis.onvoiceschanged = setupVoices;
     document.addEventListener("DOMContentLoaded", function() {
       setupVoices();
+      document.getElementById("playTTSBtn").addEventListener("click", speakRobotMessage);
 
-      // Ao clicar no botão PLAY => chama speakRobotMessage()
-      const playBtn = document.getElementById("playTTSBtn");
-      playBtn.addEventListener("click", speakRobotMessage);
+      // Scroll suave ao clicar no subtítulo
+      document.getElementById("subtitleLoggedOut").addEventListener("click", function() {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      });
     });
-
-document.addEventListener("DOMContentLoaded", function() {
-  const subtitleLoggedOut = document.getElementById("subtitleLoggedOut");
-
-  // Adiciona evento de clique no subtítulo "Login and Start Learning"
-  subtitleLoggedOut.addEventListener("click", function() {
-    // Faz o scroll para o topo da página
-    window.scrollTo({
-      top: 0,       // Define a posição vertical para 0 (topo)
-      behavior: "smooth" // Faz o scroll suave
-    });
-  });
-});
 
     // ------------------------------------------------------
-    // 12) Parar TTS ao sair da página (opcional)
+    // 12) Parar TTS ao sair da página
     // ------------------------------------------------------
     window.addEventListener("beforeunload", function() {
       speechSynthesis.cancel();
-    });    
+    });
+
+    // ------------------------------------------------------
+    // 13) Botão de instalação do PWA
+    // ------------------------------------------------------
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      document.getElementById('installBtn').style.display = 'block';
+    });
+
+    document.getElementById('installBtn').addEventListener('click', () => {
+      document.getElementById('installBtn').style.display = 'none';
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then((choiceResult) => {
+          console.log('Resultado da instalação:', choiceResult.outcome);
+          deferredPrompt = null;
+        });
+      }
+    });
   </script>
+
 <!-- REGISTRO DO SERVICE WORKER -->
 <script>
   if ('serviceWorker' in navigator) {
