--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
       appId:"1:449818788486:web:8a49d3f68591e6fb3f0707",
       measurementId:"G-07VVJG9LRS"};
     if(!firebase.apps.length){firebase.initializeApp(firebaseConfig);}
+firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION)
+  .then(() => {
+    console.log("Persistência configurada para 'SESSION'.");
+  })
+  .catch((error) => {
+    console.error("Erro ao definir persistência:", error);
+  });
+
 
     /* ---------- 2) Variáveis globais ---------- */
     let englishVoice=null,hasEnglishVoice=false,deferredPrompt;
