--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
@@ -133,7 +133,7 @@
   </div>
 
   <!-- Botão flutuante PWA -->
-  <button id="installBtn">Install App</button>
+  <button id="installBtn" disabled>Install App</button>
 
   <!-- ================== SCRIPTS ================== -->
   <script>
@@ -147,14 +147,9 @@
       appId:"1:449818788486:web:8a49d3f68591e6fb3f0707",
       measurementId:"G-07VVJG9LRS"};
     if(!firebase.apps.length){firebase.initializeApp(firebaseConfig);}
-firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION)
-  .then(() => {
-    console.log("Persistência configurada para 'SESSION'.");
-  })
-  .catch((error) => {
-    console.error("Erro ao definir persistência:", error);
-  });
-
+    firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION)
+      .then(()=>{console.log("Persistência configurada para 'SESSION'.");})
+      .catch((error)=>{console.error("Erro ao definir persistência:", error);});
 
     /* ---------- 2) Variáveis globais ---------- */
     let englishVoice=null,hasEnglishVoice=false,deferredPrompt;
@@ -169,23 +164,26 @@ firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION)
       window.addEventListener("beforeinstallprompt",e=>{
         e.preventDefault();
         deferredPrompt=e;
-        installBtn.style.display="flex";
-        installBtn.classList.add("pulse");
         console.log("[PWA] beforeinstallprompt disparou");
+        installBtn.disabled=false;               // habilita o botão
+        installBtn.style.display="flex";         // mostra o botão
+        installBtn.classList.add("pulse");       // animação
       });
     }
 
     /* ---------- 5) Clique no botão de instalar ---------- */
     installBtn.onclick=()=>{
+      if(!deferredPrompt){                       // proteção extra
+        console.warn("[PWA] Botão clicado antes do 'beforeinstallprompt'. Aguarde.");
+        return;
+      }
       installBtn.classList.remove("pulse");
       installBtn.style.display="none";
-      if(deferredPrompt){
-        deferredPrompt.prompt();
-        deferredPrompt.userChoice.then(c=>{
-          console.log("[PWA] escolha:",c.outcome);
-          deferredPrompt=null;
-        });
-      }
+      deferredPrompt.prompt();
+      deferredPrompt.userChoice.then(c=>{
+        console.log("[PWA] escolha:", c.outcome);
+        deferredPrompt=null;
+      });
     };
 
     /* ---------- 6) Evento appinstalled ---------- */
