--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
       100%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,0);}
     }
     #installBtn.pulse{animation:pulse 2s infinite;}
+
+    /* ---------- avisos --------- */
+    #iosInstallBanner{
+      display:none;
+      position:fixed;bottom:0;left:0;right:0;
+      background:#fffbe8;border-top:1px solid #ccc;
+      padding:12px 16px;
+      text-align:center;font-size:16px;z-index:10000;
+    }
+    #iosInstallBanner button{
+      margin-left:10px;background:#ff5722;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;
+    }
   </style>
 </head>
 
@@ -135,6 +147,12 @@
   <!-- Botão flutuante PWA -->
   <button id="installBtn" disabled>Install App</button>
 
+  <!-- Aviso para iOS -->
+  <div id="iosInstallBanner">
+    To install the app, tap the <strong>Share</strong> button and choose “Add to Home Screen”.
+    <button id="iosBannerClose">OK</button>
+  </div>
+
   <!-- ================== SCRIPTS ================== -->
   <script>
     /* ---------- 1) Configuração Firebase ---------- */
@@ -152,60 +170,104 @@
       .catch((error)=>{console.error("Erro ao definir persistência:", error);});
 
     /* ---------- 2) Variáveis globais ---------- */
-    let englishVoice=null,hasEnglishVoice=false,deferredPrompt;
+    let englishVoice=null,deferredPrompt=null;
     const installBtn=document.getElementById("installBtn");
 
-    /* ---------- 3) Detecta modo standalone: se já instalado, remove o botão ---------- */
+    /* ---------- 3) Utilidades de ambiente ---------- */
+    const ua=navigator.userAgent.toLowerCase();
     const isStandalone=window.matchMedia("(display-mode: standalone)").matches || window.navigator.standalone===true;
-    if(isStandalone){
-      installBtn.remove(); /* nunca mostra dentro do app instalado */
-    }else{
-      /* ---------- 4) Evento beforeinstallprompt ---------- */
-      window.addEventListener("beforeinstallprompt",e=>{
-        e.preventDefault();
-        deferredPrompt=e;
-        console.log("[PWA] beforeinstallprompt disparou");
-        installBtn.disabled=false;               // habilita o botão
-        installBtn.style.display="flex";         // mostra o botão
-        installBtn.classList.add("pulse");       // animação
+    const isIOS=/iphone|ipad|ipod/.test(ua);
+    const hasBeforeInstallPrompt='onbeforeinstallprompt' in window;
+
+    /* ---------- 4) Banner iOS ---------- */
+    if(isIOS && !isStandalone){
+      document.getElementById("iosInstallBanner").style.display="block";
+      document.getElementById("iosBannerClose").onclick=()=>document.getElementById("iosInstallBanner").style.display="none";
+    }
+
+    /* ---------- 5) Já possuo o app instalado? (Chrome only) ---------- */
+    if(!isStandalone && 'getInstalledRelatedApps' in navigator){
+      navigator.getInstalledRelatedApps().then(apps=>{
+        if(apps.length){
+          const go=confirm("It looks like you already have the app installed. Would you like to open it now?");
+          if(go){ window.close(); } // fecha a aba atual; usuário abrirá pelo ícone
+        }
       });
     }
 
-    /* ---------- 5) Clique no botão de instalar ---------- */
+    /* ---------- 6) Eventos de rede ---------- */
+    function updateNetworkStatus(){
+      if(!navigator.onLine){
+        installBtn.disabled=true;
+        console.warn("[PWA] offline – instalação desativada.");
+      }else{
+        if(deferredPrompt){ installBtn.disabled=false; }
+      }
+    }
+    window.addEventListener('offline',updateNetworkStatus);
+    window.addEventListener('online',updateNetworkStatus);
+
+    /* ---------- 7) beforeinstallprompt ---------- */
+    if(!isStandalone && !isIOS){
+      window.addEventListener("beforeinstallprompt",e=>{
+        e.preventDefault();
+        deferredPrompt=e;
+        installBtn.disabled=false;
+        installBtn.style.display="flex";
+        installBtn.classList.add("pulse");
+        console.log("[PWA] beforeinstallprompt capturado.");
+      });
+    }
+
+    /* ---------- 8) Fallback para navegadores sem suporte ---------- */
+    setTimeout(()=>{
+      if(!deferredPrompt && !isStandalone && !isIOS){
+        console.warn("[PWA] Navegador sem suporte ao beforeinstallprompt.");
+        alert("Your browser may not support automatic installation. Try using Chrome or Edge, or install manually via your browser menu.");
+      }
+    },8000);
+
+    /* ---------- 9) Clique no botão de instalar ---------- */
     installBtn.onclick=()=>{
-      if(!deferredPrompt){                       // proteção extra
-        console.warn("[PWA] Botão clicado antes do 'beforeinstallprompt'. Aguarde.");
+      if(!navigator.onLine){
+        alert("Your connection seems unstable. Please connect to the internet and try again.");
+        return;
+      }
+      if(!deferredPrompt){
+        console.warn("[PWA] Botão clicado mas evento ausente.");
         return;
       }
       installBtn.classList.remove("pulse");
       installBtn.style.display="none";
       deferredPrompt.prompt();
-      deferredPrompt.userChoice.then(c=>{
-        console.log("[PWA] escolha:", c.outcome);
+      deferredPrompt.userChoice.then(choice=>{
+        console.log("[PWA] escolha:",choice.outcome);
         deferredPrompt=null;
       });
     };
 
-    /* ---------- 6) Evento appinstalled ---------- */
+    /* ---------- 10) Evento appinstalled ---------- */
     window.addEventListener("appinstalled",()=>{
       console.log("[PWA] instalado 🎉");
       installBtn.remove();
     });
 
-    /* ---------- 7) TTS util ---------- */
-    function pickAnyEnglishVoice(){const voices=speechSynthesis.getVoices()||[];
-      for(const v of voices){if(v.lang.toLowerCase().includes("en")){hasEnglishVoice=true;return v;}}
-      hasEnglishVoice=false;return null;}
+    /* ---------- 11) TTS util ---------- */
+    function pickAnyEnglishVoice(){
+      const voices=speechSynthesis.getVoices()||[];
+      for(const v of voices){ if(v.lang.toLowerCase().includes("en")) return v; }
+      return null;
+    }
     function speakRobotMessage(){
       const text="Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!";
       const utt=new SpeechSynthesisUtterance(text);
-      if(englishVoice)utt.voice=englishVoice;
+      if(englishVoice) utt.voice=englishVoice;
       utt.onstart=()=>document.getElementById("roboImage").src="imagens/robo_fala.gif";
       utt.onend=()=>document.getElementById("roboImage").src="imagens/robo_estatico.png";
       speechSynthesis.speak(utt);
     }
 
-    /* ---------- 8) Autenticação & UI (sem alterações na lógica original) ---------- */
+    /* ---------- 12) Autenticação & UI (sem alterações) ---------- */
     firebase.auth().onAuthStateChanged(user=>{
       const loginLink=document.getElementById("loginLink");
       const userDropdown=document.getElementById("userDropdown");
@@ -278,7 +340,7 @@
       document.getElementById("freeGamesButton").onclick=()=>window.location.href="https://hannahenglishcourse.vercel.app/game.html";
     });
 
-    /* ---------- 9) TTS/scroll init ---------- */
+    /* ---------- 13) TTS/scroll init ---------- */
     speechSynthesis.onvoiceschanged=()=>englishVoice=pickAnyEnglishVoice();
     document.addEventListener("DOMContentLoaded",()=>{
       englishVoice=pickAnyEnglishVoice();
@@ -287,12 +349,15 @@
     });
     window.addEventListener("beforeunload",()=>speechSynthesis.cancel());
 
-    /* ---------- 10) Service-Worker ---------- */
+    /* ---------- 14) Service-Worker ---------- */
     if('serviceWorker' in navigator){
       navigator.serviceWorker.register('/service-worker.js')
         .then(reg=>console.log('✅ Service Worker registrado:',reg))
         .catch(err=>console.error('❌ SW erro:',err));
     }
+
+    /* ---------- inicialização de rede --------- */
+    updateNetworkStatus();
   </script>
 </body>
 </html>
