--- a/index.html
+++ b/index.html
@@ -4,31 +4,28 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hannah English - Learning English through Bible Stories</title>
-  <!-- Favicon padrão -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
-  <!-- Favicon para navegadores com tamanhos específicos -->
+  <!-- FAVICONS -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"/>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
-
-  <!-- Favicon para Android -->
   <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png"/>
   <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png"/>
-
-  <!-- Ícone para dispositivos Apple -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
 
+  <!-- CSS PRINCIPAL -->
   <link rel="stylesheet" href="CSS/styles.css"/>
-  <!-- Manifesto PWA -->
+
+  <!-- MANIFESTO PWA -->
   <link rel="manifest" href="manifest.json"/>
 
-  <!-- Firebase Libraries -->
+  <!-- FIREBASE -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <style>
-    /* ------------ layout original ------------ */
+    /* ---------- layout original ---------- */
     body{margin:0;font-family:Arial, sans-serif;overflow:auto;}
     .container{width:100%;max-width:1200px;margin:0 auto;padding:20px;text-align:center;position:relative;
       background-image:url('imagens/fundo.png');background-repeat:repeat;background-size:200%;overflow:auto;}
@@ -42,7 +39,7 @@
     .levelC{background-image:url('imagens/levelC.png');}
     .levelD{background-image:url('imagens/levelD.png');}
 
-    /* ------------ login box ------------ */
+    /* ---------- login box ---------- */
     .login-container{display:flex;align-items:center;gap:10px;position:absolute;top:20px;right:60px;z-index:10;
       background:#fff;padding:10px;border-radius:8px;box-shadow:0 4px 8px rgba(0,0,0,.1);cursor:pointer;}
     .user-icon{width:40px;height:40px;border-radius:50%;}
@@ -52,7 +49,7 @@
     .dropdown a{display:block;padding:10px;text-decoration:none;color:#333;font-size:16px;text-align:left;}
     .dropdown a:hover{background:#f2f2f2;}
 
-    /* ------------ robô, botão play e convites ------------ */
+    /* ---------- robô, play e convites ---------- */
     .robo-container{display:flex;flex-direction:column;align-items:center;margin:20px auto;}
     .robo-img{width:300px;height:auto;}
     .play-button{margin-top:-40px;padding:8px 16px;border:2px solid #ccc;border-radius:20px;background:#fff;color:#000;
@@ -63,46 +60,21 @@
       box-shadow:0 4px 8px rgba(0,0,0,.2);transition:.3s;}
     .invitation-button:hover,.free-games-button:hover{transform:scale(1.05);box-shadow:0 6px 12px rgba(0,0,0,.3);}
 
-    /* ============ BOTÃO PWA – NOVO DESIGN ============ */
+    /* ---------- BOTÃO PWA ---------- */
     #installBtn{
-      display:none;
-      position:fixed;
-      bottom:calc(env(safe-area-inset-bottom,0px) + 24px);
-      right:24px;
-      z-index:9999;
-      background:linear-gradient(135deg,#ff9800 0%,#ff5722 100%);
-      color:#fff;
-      border:none;
-      padding:14px 24px;
-      border-radius:50px;
-      font-size:18px;
-      font-weight:700;
-      box-shadow:0 6px 12px rgba(0,0,0,.25);
-      cursor:pointer;
-      display:flex;
-      align-items:center;
-      gap:10px;
-    }
+      display:none;position:fixed;bottom:calc(env(safe-area-inset-bottom,0px) + 24px);right:24px;z-index:9999;
+      background:linear-gradient(135deg,#ff9800 0%,#ff5722 100%);color:#fff;border:none;padding:14px 24px;border-radius:50px;
+      font-size:18px;font-weight:700;box-shadow:0 6px 12px rgba(0,0,0,.25);cursor:pointer;display:flex;align-items:center;gap:10px;}
     #installBtn::before{content:"📲";font-size:24px;}
     #installBtn:hover{transform:scale(1.05);box-shadow:0 8px 16px rgba(0,0,0,.35);}
-    @keyframes pulse{
-      0%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,.7);}
-      70%{transform:scale(1.05);box-shadow:0 0 0 12px rgba(255,87,34,0);}
-      100%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,0);}
-    }
+    @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,.7);}
+      70%{transform:scale(1.05);box-shadow:0 0 0 12px rgba(255,87,34,0);}100%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,0);}}
     #installBtn.pulse{animation:pulse 2s infinite;}
 
-    /* ---------- avisos --------- */
-    #iosInstallBanner{
-      display:none;
-      position:fixed;bottom:0;left:0;right:0;
-      background:#fffbe8;border-top:1px solid #ccc;
-      padding:12px 16px;
-      text-align:center;font-size:16px;z-index:10000;
-    }
-    #iosInstallBanner button{
-      margin-left:10px;background:#ff5722;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;
-    }
+    /* ---------- banner iOS ---------- */
+    #iosInstallBanner{display:none;position:fixed;bottom:0;left:0;right:0;background:#fffbe8;border-top:1px solid #ccc;
+      padding:12px 16px;text-align:center;font-size:16px;z-index:10000;}
+    #iosInstallBanner button{margin-left:10px;background:#ff5722;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;}
   </style>
 </head>
 
@@ -130,7 +102,7 @@
       <img src="imagens/Free_Games.gif" alt="Jogos Grátis" class="free-games-button" id="freeGamesButton"/>
     </div>
 
-    <main>          
+    <main>
       <h2 class="subtitle" id="subtitleLoggedOut">Login and Start Learning English While Playing</h2>
       <h2 class="subtitle" id="subtitleLoggedIn" style="display:none;">Choose your level and Start Learning English While Playing</h2>
 
@@ -147,15 +119,15 @@
   <!-- Botão flutuante PWA -->
   <button id="installBtn" disabled>Install App</button>
 
-  <!-- Aviso para iOS -->
+  <!-- Banner iOS -->
   <div id="iosInstallBanner">
     To install the app, tap the <strong>Share</strong> button and choose “Add to Home Screen”.
     <button id="iosBannerClose">OK</button>
   </div>
 
-  <!-- ================== SCRIPTS ================== -->
+  <!-- SCRIPTS -->
   <script>
-    /* ---------- 1) Configuração Firebase ---------- */
+    /* ---------- Firebase ---------- */
     var firebaseConfig={apiKey:"AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
       authDomain:"hannahenglishcourse.firebaseapp.com",
       databaseURL:"https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
@@ -166,48 +138,38 @@
       measurementId:"G-07VVJG9LRS"};
     if(!firebase.apps.length){firebase.initializeApp(firebaseConfig);}
     firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION)
-      .then(()=>{console.log("Persistência configurada para 'SESSION'.");})
-      .catch((error)=>{console.error("Erro ao definir persistência:", error);});
+      .catch(err=>console.error("Persistência:",err));
 
-    /* ---------- 2) Variáveis globais ---------- */
+    /* ---------- Variáveis globais ---------- */
     let englishVoice=null,deferredPrompt=null;
     const installBtn=document.getElementById("installBtn");
 
-    /* ---------- 3) Utilidades de ambiente ---------- */
+    /* ---------- Detecção de ambiente ---------- */
     const ua=navigator.userAgent.toLowerCase();
-    const isStandalone=window.matchMedia("(display-mode: standalone)").matches || window.navigator.standalone===true;
+    const isStandalone=window.matchMedia("(display-mode: standalone)").matches || navigator.standalone===true;
     const isIOS=/iphone|ipad|ipod/.test(ua);
-    const hasBeforeInstallPrompt='onbeforeinstallprompt' in window;
+    const supportsBIP='onbeforeinstallprompt' in window;
+    const isChrome=/chrome/i.test(ua)&&!!window.chrome&&!/edge|edg|opr|brave/i.test(ua);
 
-    /* ---------- 4) Banner iOS ---------- */
+    /* ---------- Banner iOS ---------- */
     if(isIOS && !isStandalone){
-      document.getElementById("iosInstallBanner").style.display="block";
-      document.getElementById("iosBannerClose").onclick=()=>document.getElementById("iosInstallBanner").style.display="none";
+      const iosBanner=document.getElementById("iosInstallBanner");
+      iosBanner.style.display="block";
+      document.getElementById("iosBannerClose").onclick=()=>iosBanner.style.display="none";
     }
 
-    /* ---------- 5) Já possuo o app instalado? (Chrome only) ---------- */
-    if(!isStandalone && 'getInstalledRelatedApps' in navigator){
-      navigator.getInstalledRelatedApps().then(apps=>{
-        if(apps.length){
-          const go=confirm("It looks like you already have the app installed. Would you like to open it now?");
-          if(go){ window.close(); } // fecha a aba atual; usuário abrirá pelo ícone
-        }
-      });
-    }
+    /* ---------- Oculta botão se já estiver no app ---------- */
+    if(isStandalone){ installBtn.remove(); }
 
-    /* ---------- 6) Eventos de rede ---------- */
+    /* ---------- Rede ---------- */
     function updateNetworkStatus(){
-      if(!navigator.onLine){
-        installBtn.disabled=true;
-        console.warn("[PWA] offline – instalação desativada.");
-      }else{
-        if(deferredPrompt){ installBtn.disabled=false; }
-      }
+      if(!navigator.onLine){ installBtn.disabled=true; }
+      else if(deferredPrompt){ installBtn.disabled=false; }
     }
-    window.addEventListener('offline',updateNetworkStatus);
     window.addEventListener('online',updateNetworkStatus);
+    window.addEventListener('offline',updateNetworkStatus);
 
-    /* ---------- 7) beforeinstallprompt ---------- */
+    /* ---------- Evento beforeinstallprompt ---------- */
     if(!isStandalone && !isIOS){
       window.addEventListener("beforeinstallprompt",e=>{
         e.preventDefault();
@@ -215,66 +177,52 @@
         installBtn.disabled=false;
         installBtn.style.display="flex";
         installBtn.classList.add("pulse");
-        console.log("[PWA] beforeinstallprompt capturado.");
+        console.log("[PWA] beforeinstallprompt capturado");
       });
     }
 
-    /* ---------- 8) Fallback para navegadores sem suporte ---------- */
+    /* ---------- Fallback para navegadores sem suporte ---------- */
     setTimeout(()=>{
-      if(!deferredPrompt && !isStandalone && !isIOS){
-        console.warn("[PWA] Navegador sem suporte ao beforeinstallprompt.");
-        alert("Your browser may not support automatic installation. Try using Chrome or Edge, or install manually via your browser menu.");
+      if(!isStandalone && !isIOS && !deferredPrompt && !supportsBIP){
+        alert("Your browser may not support automatic installation. Try using Chrome or Edge for the best experience.");
       }
     },8000);
 
-    /* ---------- 9) Clique no botão de instalar ---------- */
+    /* ---------- Clique no botão de instalar ---------- */
     installBtn.onclick=()=>{
       if(!navigator.onLine){
         alert("Your connection seems unstable. Please connect to the internet and try again.");
         return;
       }
-      if(!deferredPrompt){
-        console.warn("[PWA] Botão clicado mas evento ausente.");
-        return;
-      }
+      if(!deferredPrompt){ return; }
       installBtn.classList.remove("pulse");
       installBtn.style.display="none";
       deferredPrompt.prompt();
-      deferredPrompt.userChoice.then(choice=>{
-        console.log("[PWA] escolha:",choice.outcome);
-        deferredPrompt=null;
-      });
+      deferredPrompt.userChoice.finally(()=>deferredPrompt=null);
     };
 
-    /* ---------- 10) Evento appinstalled ---------- */
-    window.addEventListener("appinstalled",()=>{
-      console.log("[PWA] instalado 🎉");
-      installBtn.remove();
-    });
+    /* ---------- appinstalled ---------- */
+    window.addEventListener("appinstalled",()=>installBtn.remove());
 
-    /* ---------- 11) TTS util ---------- */
-    function pickAnyEnglishVoice(){
-      const voices=speechSynthesis.getVoices()||[];
-      for(const v of voices){ if(v.lang.toLowerCase().includes("en")) return v; }
-      return null;
-    }
-    function speakRobotMessage(){
-      const text="Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!";
-      const utt=new SpeechSynthesisUtterance(text);
-      if(englishVoice) utt.voice=englishVoice;
+    /* ---------- TTS ---------- */
+    function pickVoice(){for(const v of (speechSynthesis.getVoices()||[])){if(v.lang.toLowerCase().includes('en'))return v;}return null;}
+    function speakRobot(){
+      const utt=new SpeechSynthesisUtterance("Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!");
+      if(englishVoice)utt.voice=englishVoice;
       utt.onstart=()=>document.getElementById("roboImage").src="imagens/robo_fala.gif";
       utt.onend=()=>document.getElementById("roboImage").src="imagens/robo_estatico.png";
       speechSynthesis.speak(utt);
     }
+    speechSynthesis.onvoiceschanged=()=>englishVoice=pickVoice();
 
-    /* ---------- 12) Autenticação & UI (sem alterações) ---------- */
+    /* ---------- UI & Firebase auth ---------- */
     firebase.auth().onAuthStateChanged(user=>{
       const loginLink=document.getElementById("loginLink");
       const userDropdown=document.getElementById("userDropdown");
-      const roboContainer=document.getElementById("roboContainer");
-      const invitationContainer=document.getElementById("invitationContainer");
       const subtitleLoggedOut=document.getElementById("subtitleLoggedOut");
       const subtitleLoggedIn=document.getElementById("subtitleLoggedIn");
+      const roboContainer=document.getElementById("roboContainer");
+      const invitationContainer=document.getElementById("invitationContainer");
 
       if(user){
         subtitleLoggedOut.style.display="none";subtitleLoggedIn.style.display="block";
@@ -292,14 +240,10 @@
             dash='<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
             if(d.atrelado_professor){
               firebase.database().ref("usuarios/"+d.atrelado_professor).once("value").then(p=>{
-                const pd=p.val();const turmaId="-O8mdLgStvNqNf6x-O5l";const alunoId=user.uid;
-                const reg=pd?.turmas?.[turmaId]?.students?.[alunoId];
-                const nivel=reg?.nivel_em_curso||null;
-                nivel?liberarNiveis([nivel]):liberarNiveis(["Level1"]);
-              }).catch(()=>liberarNiveis(["Level1"]));
-            }else{
-              d.progresso?liberarNiveis(Object.keys(d.progresso)):liberarNiveis(["Level1"]);
-            }
+                const reg=p.val()?.turmas?.["-O8mdLgStvNqNf6x-O5l"]?.students?.[user.uid];
+                enviarNivel(reg?.nivel_em_curso);
+              }).catch(()=>enviarNivel());
+            }else enviarNivel();
           }
           userDropdown.innerHTML=`${dash}<a href="#" id="logout">LEAVE</a>`;
           document.querySelectorAll(".dashboard-link").forEach(l=>l.onclick=e=>{
@@ -313,12 +257,9 @@
         bloquearTodosNiveis();
       }
     });
-
-    function bloquearTodosNiveis(){document.querySelectorAll(".level-button").forEach(b=>{
-      b.style.filter="grayscale(100%)";b.style.pointerEvents="none";});}
-    function liberarNiveis(arr){document.querySelectorAll(".level-button").forEach(b=>{
-      arr.includes(b.id)?(b.style.filter="none",b.style.pointerEvents="auto"):
-                         (b.style.filter="grayscale(100%)",b.style.pointerEvents="none");});}
+    function enviarNivel(n){n?liberarNiveis([n]):liberarNiveis(["Level1"]);}
+    function bloquearTodosNiveis(){document.querySelectorAll(".level-button").forEach(b=>{b.style.filter="grayscale(100%)";b.style.pointerEvents="none";});}
+    function liberarNiveis(arr){document.querySelectorAll(".level-button").forEach(b=>{arr.includes(b.id)?(b.style.filter="none",b.style.pointerEvents="auto"):(b.style.filter="grayscale(100%)",b.style.pointerEvents="none");});}
 
     document.getElementById("loginContainer").onclick=e=>{
       if(!firebase.auth().currentUser)return;
@@ -331,33 +272,24 @@
         document.getElementById("userDropdown").style.display="none";
     });
     document.addEventListener("click",e=>{
-      if(e.target.id==="logout"){
-        firebase.auth().signOut().then(()=>location.reload());
-      }
+      if(e.target.id==="logout"){firebase.auth().signOut().then(()=>location.reload());}
     });
     document.addEventListener("DOMContentLoaded",()=>{
-      document.getElementById("invitationButton").onclick=()=>window.location.href="Apresentacao/propaganda.html";
-      document.getElementById("freeGamesButton").onclick=()=>window.location.href="https://hannahenglishcourse.vercel.app/game.html";
-    });
-
-    /* ---------- 13) TTS/scroll init ---------- */
-    speechSynthesis.onvoiceschanged=()=>englishVoice=pickAnyEnglishVoice();
-    document.addEventListener("DOMContentLoaded",()=>{
-      englishVoice=pickAnyEnglishVoice();
-      document.getElementById("playTTSBtn").onclick=speakRobotMessage;
+      englishVoice=pickVoice();
+      document.getElementById("playTTSBtn").onclick=speakRobot;
+      document.getElementById("invitationButton").onclick=()=>location.href="Apresentacao/propaganda.html";
+      document.getElementById("freeGamesButton").onclick=()=>location.href="https://hannahenglishcourse.vercel.app/game.html";
       document.getElementById("subtitleLoggedOut").onclick=()=>window.scrollTo({top:0,behavior:"smooth"});
+      updateNetworkStatus();
     });
     window.addEventListener("beforeunload",()=>speechSynthesis.cancel());
 
-    /* ---------- 14) Service-Worker ---------- */
+    /* ---------- Service Worker ---------- */
     if('serviceWorker' in navigator){
       navigator.serviceWorker.register('/service-worker.js')
-        .then(reg=>console.log('✅ Service Worker registrado:',reg))
-        .catch(err=>console.error('❌ SW erro:',err));
+        .then(r=>console.log("SW registrado:",r.scope))
+        .catch(err=>console.error("SW erro:",err));
     }
-
-    /* ---------- inicialização de rede --------- */
-    updateNetworkStatus();
   </script>
 </body>
 </html>
